# v2v-cpp

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
src/: barcode_reader.hpp  ipc.hpp  main.cpp  webcam.cpp  webcam.h
